[CAPEDWARF-160]; handle redirects.